@@ -3,6 +3,7 @@ Version 4.1.4 (2014-xx-xx)
 	Fixed bug where placing the caret on iOS was difficult due to a WebKit bug with touch events.
 	Fixed bug where the resize helper wouldn't render properly on older IE versions.
 	Fixed bug where resizing images inside tables on older IE versions would sometimes fail depending mouse position.
+	Fixed bug where editor.insertContent would produce an exception when inserting select/option elements.
 	Fixed so activate/deactivate events fire when windowManager opens a window since.
 Version 4.1.3 (2014-07-29)
 	Added event binding logic to tinymce.util.XHR making it possible to override headers and settings before any request is made.
